# xc-scraper

./: .env  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  FEATURES.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  app.py  backup_of_db_10_6.sql  batch_import.py  database.py  example_urls.txt  main.py  migrate_add_exclusion.py  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
.claude/: settings.local.json
reference/: missouri_schools.csv
