[project]
name = "xc-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=2.3.2",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
]
